# biaoqingbao

./: .gitignore  README.md  env.dev.sh.example  env.sh.example  env.test.sh.example  gunicorn.conf.py  pyproject.toml  run.sh  setup.py
deploy/: inventory.py  nginx.conf  systemd.service  update.py
docs/: interface.md
src/biaoqingbao/: __init__.py  auth.py  cli.py  configs.py  create_app.py  factory.py  models.py  service.py  services.py  utils.py  views.py
src/biaoqingbao/views/: __init__.py  main.py  user.py
tests/: __init__.py  real_services.py  test_cli.py  test_groups.py  test_images.py  test_tags.py  test_user.py
